--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,28 +6,45 @@ import Content from "../components/Content.astro";
 import Slider from "../components/Slider.astro";
 
 // Import images for each project
-import img8m from "../assets/images/8m.png";
-import imgCarneAjena0 from "../assets/images/carne-ajena0.png";
-import imgCarneAjena1 from "../assets/images/carne-ajena1.png";
-import imgCatrinas0 from "../assets/images/catrinas1.png";
-import imgTatuaje0 from "../assets/images/tatuaje0.png";
-import imgMuertos0 from "../assets/images/muertos0.jpeg";
-import imgMuertos1 from "../assets/images/muertos1.jpeg";
-import imgMuertos2 from "../assets/images/muertos2.jpeg";
+import img8m from "../assets/images/8m.webp";
+import imgCarneAjena0 from "../assets/images/carne-ajena0.webp";
+import imgCarneAjena1 from "../assets/images/carne-ajena1.webp";
+import imgCatrinas0 from "../assets/images/catrinas1.webp";
+import imgTatuaje0 from "../assets/images/tatuaje0.webp";
+import imgMuertos0 from "../assets/images/muertos0.webp";
+import imgMuertos1 from "../assets/images/muertos1.webp";
+import imgMuertos2 from "../assets/images/muertos2.webp";
+import imgSpot0 from "../assets/images/spot0.webp";
+import imgSpot1 from "../assets/images/spot1.webp";
+import imgSpot2 from "../assets/images/spot2.webp";
+import imgSpot3 from "../assets/images/spot3.webp";
+import imgSpot4 from "../assets/images/spot4.webp";
+import imgSpot5 from "../assets/images/spot5.webp";
+import imgSpot6 from "../assets/images/spot6.webp";
+import imgSpot7 from "../assets/images/spot7.webp";
+import imgSpot8 from "../assets/images/spot8.webp";
+import imgSpot9 from "../assets/images/spot9.webp";
 
 const infoContent = `
-<h2>Daniel Ortiz.</h2>
-<h3>Estudiante de<br>Comunicación y Periodismo.</h3>
+<h2>Daniel Alejandro Peregrino Ortiz</h2>
+<h3>Estudiante de<br>Comunicación y Periodismo</h3>
 
 <div style="margin-top: 2rem;">
   <h4>Conecta</h4>
   <p>Ciudad de México<br>
-  56 2565 4482<br>
-  danielortiz@gmail.com</p>
+  +52 5540567376<br>
+  dannyoropeza76@gmail.com</p>
 </div>
 `;
 
 const projects = [
+  {
+    title: "SPOT MAGAZINE",
+    subtitle: "Revista digital: Edición digital",
+    images: [imgSpot0, imgSpot1, imgSpot2, imgSpot3, imgSpot4, imgSpot5, imgSpot6, imgSpot7, imgSpot8, imgSpot9],
+    description: `<p>Contenido editorial y visual enfocado en <strong>cultura urbana, tendencias emergentes, arte y sociedad contemporánea</strong>. Ideal para difusión digital mediante Drive u otras plataformas colaborativas.</p>
+    <p><strong><a href="https://drive.google.com/file/d/1jf4DLEudw2_s2-_em2_0linM7Oohn8I-/view" target="_blank" rel="noopener noreferrer">Descarga la revista completa aquí →</a></strong></p>`,
+  },
   {
     title: "Separadores 8M para el CECATI 128",
     subtitle: "Diseño conmemorativo Día Internacional de la Mujer (8M)",
